Fixing footer on mobile
Making position fixed instead of absolute

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,8 +1,7 @@
 #copyright {
-  position: absolute;
+  position: fixed;
   bottom: 0px;
   width: 100%;
-  height: 35px;
   background-color: #DCDCDC;
   display: flex;
   margin: auto;
